[package]
name = "http-rewriter"
version = "1.0.0"
description = "A request rewriting library for use with the http crate"
authors = ["Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)"]
license = "Apache-2.0"
repository = "https://github.com/platformatic/http-rewriter"
keywords = ["http", "rewriting", "library"]
categories = ["network-programming", "web-development"]
edition = "2024"

[lib]
name = "http_rewriter"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[features]
default = []
napi-support = ["dep:napi", "dep:napi-derive", "dep:napi-build", "http-handler/napi-support"]

[build-dependencies]
napi-build = { version = "2.2.1", optional = true }

[dependencies]
bytes = "1.10.1"
http = "1.0"
regex = "1.11.1"
http-handler = { git = "ssh://git@github.com/platformatic/http-handler" }
# http-handler = { path = "../http-handler" }
napi = { version = "3.0.0-beta.8", features = ["napi4"], optional = true }
napi-derive = { version = "3.0.0-beta.8", optional = true }
