[package]
name = "http-rewriter"
version = "1.0.0"
description = "A request rewriting library for use with the http crate"
authors = ["Platformatic Inc. <oss@platformatic.dev> (https://platformatic.dev)"]
license = "Apache-2.0"
repository = "https://github.com/platformatic/http-rewriter"
keywords = ["http", "rewriting", "library"]
categories = ["network-programming", "web-development"]
edition = "2024"

[dependencies]
bytes = "1.10.1"
http = "1.0"
regex = "1.11.1"
